@@ -105,25 +105,24 @@ function M_Roles_joinedlevel( $tolevel_id, $user_id ) {
 add_action( 'membership_add_level', 'M_Roles_joinedlevel', 10, 2 );
 
 function M_Roles_leftlevel( $fromlevel_id, $user_id ) {
-
 	// Set up the level and find out if it has a leaving ping
 	$level = new M_Level( $fromlevel_id );
 	$member = Membership_Plugin::factory()->get_member( $user_id );
 
 	$wprole = $level->get_meta( 'associated_wp_role' );
-	if(!empty($wprole)) {
-		if(method_exists($member, 'has_cap') && !$member->has_cap('activate_plugins')) {
+	if ( !empty( $wprole ) ) {
+		if ( method_exists( $member, 'has_cap' ) && !$member->has_cap( 'activate_plugins' ) ) {
 			$member->remove_role( $wprole );
 		}
 	}
 
-	if(!$member->has_levels()) {
-		if(method_exists($member, 'has_cap') && !$member->has_cap('activate_plugins')) {
-			$member->set_role( get_option('default_role') );
+	if ( !$member->has_levels() ) {
+		if ( method_exists( $member, 'has_cap' ) && !$member->has_cap( 'activate_plugins' ) ) {
+			$member->set_role( get_option( 'default_role' ) );
 		}
 	}
-
 }
+
 add_action( 'membership_drop_level', 'M_Roles_leftlevel', 10, 2 );
 
 function M_Roles_movedlevel( $fromlevel_id, $tolevel_id, $user_id ) {
@@ -150,18 +149,26 @@ function M_Roles_joinedsub( $tosub_id, $tolevel_id, $to_order, $user_id ) {
 add_action( 'membership_add_subscription', 'M_Roles_joinedsub', 10, 4 );
 
 function M_Roles_leftsub( $fromsub_id, $fromlevel_id, $user_id ) {
-
 	M_Roles_leftlevel( $fromlevel_id, $user_id );
 
 	$member = Membership_Plugin::factory()->get_member( $user_id );
-	if(!$member->has_levels()) {
-		if(method_exists($member, 'has_cap') && !$member->has_cap('activate_plugins')) {
-			$member->set_role( get_option('default_role') );
+	if ( !$member->has_levels() ) {
+		if ( method_exists( $member, 'has_cap' ) && !$member->has_cap( 'activate_plugins' ) ) {
+			$member->set_role( get_option( 'default_role' ) );
 		}
 	}
-
 }
+
 add_action( 'membership_drop_subscription', 'M_Roles_leftsub', 10, 3 );
+
+function M_Roles_expiresub( $sub_id, $user_id ) {
+	$subscription = Membership_Plugin::factory()->get_subscription( $sub_id );
+	$level_ids = wp_list_pluck( $subscription->get_levels(), 'id' );
+	foreach ( $level_ids as $level_id ) {
+		M_Roles_leftlevel( $level_id, $user_id );
+	}
+}
+add_action( 'membership_expire_subscription', 'M_Roles_expiresub', 10, 2 );
 
 function M_Roles_movedsub( $fromsub_id, $fromlevel_id, $tosub_id, $tolevel_id, $to_order, $user_id ) {
 
@@ -170,5 +177,3 @@ function M_Roles_movedsub( $fromsub_id, $fromlevel_id, $tosub_id, $tolevel_id, $
 
 }
 add_action( 'membership_move_subscription', 'M_Roles_movedsub', 10, 6 );
-
-?>
